# sio

./: .gitignore  Cargo.toml  build.zig  flake.nix  grammar.pest  shell.nix  test.lispy
book/: book.toml
book/src/: SUMMARY.md  syntax-and-semantics.md
compiler/: Cargo.toml
examples/: flake.nix
examples/rp/: Cargo.toml  elf2uf2.nix  flake.nix  raspberrypi-openocd.nix
examples/rp/.cargo/: config.toml
examples/std/: Cargo.toml
examples/std/src/: main.rs
examples/stm32103/src/: registers.zig
examples/stm32l0/: Cargo.toml  build.zig  flake.nix
examples/stm32l0/.cargo/: config
examples/stm32l0/src/: linker.ld  main.zig  registers.zig  vector.zig
examples/wasm/: Cargo.toml  README.md  flake.nix  index.html
examples/wasm/src/: lib.rs
frontend/: Cargo.toml
frontend/examples/: area_server.sio  data_variant_test.sio  dining_philosophers_problem.sio  distributed_map_reduce_church_rosser_style.sio  distributed_map_reduce_explicit_messaging_style.sio  dynamic_code_reloading.sio  module_def_test.sio  pattern_match_test.sio  reaction.sio  reaction_and_send_test.sio  return_value_test.sio  selective_receive_and_send_test.sio  stack_test.sio  var_to_var_binding_test.sio
frontend/src/: lib.rs
frontend/src/grammar/: sio_frontend.pest
scratch/: area_server.sio  church_rosser.sio  collection_operations.sio  data_variant_test.sio  datalog.sio  distributed_functional_mario_agent.sio  distributed_map_reduce_church_rosser_style_non_deterministic.sio  failure.sio  ffi.sio  functional_mario_agent.sio  lazy_test.sio  ping_pong_non_deterministic.sio  reaction.sio  stack_test.sio
scratch/brigadier/: example_brigadier.sio
scratch/map_reduce/: common_types.sio  displayer.sio  producer.sio  reducer.sio
single-assignment-store/: Cargo.toml  README.md
single-assignment-store/src/: entry.rs  iter.rs  lib.rs  tests.rs
sio/: Cargo.toml
sio-cli/: Cargo.toml
sio-cli/src/: args.rs  exec.rs  main.rs  main2.rs  params.rs
sio-compiler/: Cargo.toml
sio-compiler/src/: lib.rs
sio-frontend/: Cargo.toml
sio-frontend/src/: ast.rs  common.rs  expr_parser.rs  lib.rs  parser.rs  position.rs  stmt_parser.rs  token.rs  tokenizer.rs  url_resolver.rs
sio-frontends/: Cargo.toml
sio-frontends/src/: lib.rs  position.rs  token.rs  tokenizer.rs
sio-frontends/src/brigadier/: ast.rs  common.rs  mod.rs  parser.rs  position.rs  token.rs  tokenizer.rs
sio-frontends/src/corporal/: mod.rs
sio-frontends/src/general/: mod.rs
sio-garrison/: Cargo.toml
sio-garrison/src/: brigadier.rs  corporal.rs  general.rs  lib.rs  major.rs
sio-portablecode/: Cargo.toml
sio-portablecode/src/: lib.rs
sio-syntax/: Cargo.toml
sio-syntax/src/: lib.rs  position.rs  token.rs
sio-tests/: Cargo.toml
sio-tests/src/tests/: declarations.sio  fib-orig.sio  fib.sio  mod.rs
sio-tests/src/tests/function/: anonymous_eager_no_return_no_args.sio  public_lazy_no_return_no_args.sio
sio-tests/src/tests/if/: complex-if.sio  if.sio
sio-tests/src/tests/module/: module.sio
sio-tests/src/tests/portcullis/: portcullis.sio
sio-tests/src/tests/thread/: thread.sio
sio-vm/: Cargo.toml  README.md
sio-vm/examples/: module_def.sio
sio-vm/src/: lib.rs
sio/examples/: adt.sio  distributed_map_reduce_church_rosser_style.sio  distributed_map_reduce_church_rosser_style_non_deterministic.sio  distributed_map_reduce_explicit_messaging_style.sio  ffi.sio  functional_mario_agent.sio  gen_server1.sio  generic_procedure_test.sio  procedure_in_where_test.sio  return_value_test.sio  state_machine.sio  trait.sio
sio/examples/map_reduce/: app.sio  main.sio  mapper.sio
sio/src/: allocator.rs  lib.rs  main.rs  main.zig  tokenizer.zig
sio/src/environ/: corporal.rs  general.rs  major.rs  mod.rs
sio/src/environ/brigadier/: mod.rs
sio/src/router/: router.rs
sio/src/tests/: mod.rs
sio/src/tests/block/: empty.sio  scope.sio
sio/src/tests/function/: anonymous_lazy_no_return_no_args.sio  private_eager_no_return_no_args.sio  private_lazy_no_return_no_args.sio  public_eager_no_return_no_args.sio
sio/src/tests/if/: if.sio
sio/src/tests/module/: module.sio
sio/src/tests/thread/: thread.sio
sio/src/value/: brigadier.rs  corporal.rs  general.rs  major.rs  mod.rs
src/: Ast.zig  Parse.zig  main.zig  parser_test.zig  render.zig  tokenizer.zig
src/tests/: mod.rs
src/tests/portcullis/: portcullis.sio
syntax/: Cargo.toml
syntax/examples/: adt.sio  area_server.sio  binary_hexadecimal_test.sio  capitalized_record_key_test.sio  collection_operations.sio  gen_server2.sio  higher_order_procedure_test.sio  link_monitor.sio  module_def_test.sio  pattern_match_test.sio  print_test.sio  process_spawn_test.sio  thread_test.sio
syntax/src/: lib.rs  main.rs
syntax/src/grammar/: sio.pest
unikernel/: Cargo.toml
unikernel/.cargo/: config.toml
unikernel/src/: main.rs
visa/: Cargo.toml
visa/examples/: instruction_test.siov  mod_test.siov  process.siov
visa/src/: lib.rs
visa/src/grammar/: sio_visa.pest
vm/: Cargo.toml  Cargo.toml1  README.md
vm/src/: ast.rs  eval.rs  lib.rs  main.rs  parse.rs  protocol.rs  service.rs
vm/src/syntax/: ast.rs  mod.rs  parse.rs  token.rs
