[workspace]
members = [
    "vm",
    "frontend",
    "visa",
    "common"
]
exclude = ["target", "examples"]

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "0f4c0311feea48323ad60efa7bac3673d412cb60" }

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = false
debug-assertions = false

[profile.dev]
opt-level = 1      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-C debuginfo`
                   # a value of `true` is equivalent to `2`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false         # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
