[package]
name = "sio"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = "0.14"
werbolg-core = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-core"}
werbolg-exec = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-exec" }
werbolg-compile = { version = "0.1", git = "https://github.com/vincenthz/werbolg", package = "werbolg-compile"}
rand = { version = "0.8", default-features = false, features = ["alloc", "small_rng"] }