[package]
edition = "2021"
name = "sio_vm_rp"
version = "0.1.0"


[dependencies]
embassy-executor = { version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-time     = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp       = { version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac"] }
sio-vm = { version = "^0.1.0", path = "../../sio-vm" }
atomic-polyfill = "0.1.5"


defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.8" }
embedded-hal-async = { version = "0.1.0-alpha.1" }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
embassy-time     = { git = "https://github.com/embassy-rs/embassy.git", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
embassy-rp       = { git = "https://github.com/embassy-rs/embassy.git", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
