[package]
name = "sio_vm_stm32l0"
version = "0.1.0"
edition = "2021"

[features]
default = ["nightly"]
nightly = ["embassy-stm32/nightly", "embedded-io/async"]

[dependencies]
#embassy-util     = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-time     = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime", "tick-32768hz"] }
embassy-stm32    = { version = "0.1.0", features = ["defmt", "stm32l072cz", "time-driver-any", "exti", "unstable-traits", "memory-x"]  }

sio_vm = { version = "^0.1.0", path = "../../vm" }

defmt = "0.3"
defmt-rtt = "0.3"

embedded-storage = "0.3.0"
embedded-io = "0.3.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
embedded-hal = "0.2.6"

[patch.crates-io]
embassy-util     = { git = "https://github.com/embassy-rs/embassy.git", rev = "1b9599025868d3a5d0d8e773593b05df8b2fecf2" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "1b9599025868d3a5d0d8e773593b05df8b2fecf2" }
embassy-time     = { git = "https://github.com/embassy-rs/embassy.git", rev = "1b9599025868d3a5d0d8e773593b05df8b2fecf2" }
embassy-stm32    = { git = "https://github.com/embassy-rs/embassy.git", rev = "1b9599025868d3a5d0d8e773593b05df8b2fecf2" }

