[package]
edition = "2021"
name = "sio-vm-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
sio-vm = { version = "^0.1.0", path = "../../sio-vm" }

embassy-sync = { version = "0.1.0", features = ["log"] }
embassy-executor = { version = "0.1.0", features = ["log", "wasm", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["log", "wasm", "nightly"] }

wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window" ] }
log = "0.4.11"
critical-section = { version = "1.1", features = ["std"] }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
embassy-time     = { git = "https://github.com/embassy-rs/embassy.git", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
